test/ui/src/compile_fail/std/emit_evt_mdl.rs
fn main() {
    emit::emit!(
        evt: emit::evt!("template"),
        mdl: "test",
        "template",
    );
}
