test/ui/src/compile_fail/std/emit_evt_mdl.stderr
error: the `evt` argument cannot be set if any of `mdl`, `extent`, or `props` are also set
 --> src/compile_fail/std/emit_evt_mdl.rs:3:14
  |
3 |         evt: emit::evt!("template"),
  |              ^^^^^^^^^^^^^^^^^^^^^^
